@@ -700,8 +700,8 @@ void Host_ClearMemory (void)
 	Con_DPrintf ("Clearing memory\n");
 	D_FlushCaches ();
 	Mod_ClearAll ();
-	if (host_hunklevel)
-		Hunk_FreeToLowMark (host_hunklevel);
+/* host_hunklevel MUST be set at this point */
+	Hunk_FreeToLowMark (host_hunklevel);
 
 	cls.signon = 0;
 	memset (&sv, 0, sizeof(sv));
