@@ -546,8 +546,8 @@ void Host_ClearMemory (void)
 {
 	Con_DPrintf ("Clearing memory\n");
 	Mod_ClearAll ();
-	if (host_hunklevel)
-		Hunk_FreeToLowMark (host_hunklevel);
+/* host_hunklevel MUST be set at this point */
+	Hunk_FreeToLowMark (host_hunklevel);
 
 	memset (&sv, 0, sizeof(sv));
 }
